# reproschema-server

./: .dockerignore  .env.development  .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/nginx/: default.conf  prod.conf
config/ssl/: setup-ssl.sh
docker/: Dockerfile
docker/backend/: app.py  config.py
docker/frontend/: package.json  vue.config.js
docker/frontend/public/: index.html
docker/frontend/src/: App.vue  config.js  main.js
docs/: api-testing.md  development.md
scripts/: init-backend.sh  setup-config.sh  start.sh
tests/: test_api.py
tests/integration/: test_docker.py
